fix: stil persisting overflow issue

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -115,3 +115,6 @@ $theme-colors: (
 .border-radius-0 {
   border-radius: 0;
 }
+.overflow-clip {
+  overflow: clip;
+}
